refactors Help and DocumentedPlugin